--- a/una_columna.html
+++ b/una_columna.html
@@ -21,7 +21,7 @@
 		<div id="menulinks">
 
 			<ul id="bloque">
-				<span class="margen"><li class="linkstop"><a class="links" href="indice.html">Homepage</a></li></span>
+				<span class="margen"><li class="linkstop"><a class="links" href="index.html">Homepage</a></li></span>
 				<li class="linkstop"><a class="links" href="tres_columnas.html">Three Column</a></li>
 				<li class="linkstop"><a class="links" href="dos_columnas1.html">Two Column #1</a></li>
 				<li class="linkstop"><a class="links" href="dos_columnas2.html">Two Column #2</a></li>
