--- a/una_columna.html
+++ b/una_columna.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Dos columnas 2#</title>
+	<title>Una Columna</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<link rel="stylesheet" type="text/css" href="css/responsive_movil.css">
 </head>
