--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Practica3</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/responsive_movil.css">
+
 </head>
 <body>
 	<div id="fondotop">
