--- a/dos_columnas1.html
+++ b/dos_columnas1.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Dos columnas 1#</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/responsive_movil.css">
 </head>
 <body>
