--- a/tres_columnas.html
+++ b/tres_columnas.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/responsive_movil.css">
+	<link rel="stylesheet" type="text/css" href="css/responsive_tablet.css">
+
 </head>
 <body>
 
@@ -101,77 +103,81 @@
 		</div>
 
 	</div>
+	
+	<div id="abajocol1">
 
-	<div id="abajo">
+		<div id="abajo">
 
-		<div class="filafooter">
+			<div class="filafooter">
 
-			<div class="columnafooter">
+				<div class="columnafooter">
 
-				<p class="footertitulos">Maecenas luctus lectus</p>
+					<p class="footertitulos">Maecenas luctus lectus</p>
 
-				<img id="imgfooter" src="imagenes/pics02.jpg">
+					<img id="imgfooter" src="imagenes/pics02.jpg">
 
-				<p class="textoimg">Donec placerat odio vel elit, Nullam ante<br>orci, pellentesque eget tempues quis,<br>ultrices in est. Curatxtur sat amet nulia. Nam<br>in massa. Sed vel teilus. Curabitur sem<br>urna, consequat.</p>
+					<p class="textoimg">Donec placerat odio vel elit, Nullam ante<br>orci, pellentesque eget tempues quis,<br>ultrices in est. Curatxtur sat amet nulia. Nam<br>in massa. Sed vel teilus. Curabitur sem<br>urna, consequat.</p>
+
+				</div>
+
+				<div class="columnafooter">
+					<p class="footertitulos">Donec dicturm metus</p>
+
+					<p class="fechafooter">Mauris vulputate dolot sit amet</p>
+					<p class="textofechafooter2">Donec leo, vivamos lementum nibh in augue<br>present a lacus al urna congue rufrum.</p>
+
+					<p class="fechafooter">Fusce ultrices fringilla metus</p>
+					<p class="textofechafooter2">Donec leo, vivamos lementum nibh in augue<br>present a lacus al urna congue rufrum.</p>
+
+					<p class="fechafooter">Donec dictum metus in sapien</p>
+					<p class="textofechafooter">Donec leo, vivamos lementum nibh in augue<br>present a lacus al urna congue rufrum.</p>
+
+				</div>
+
+				<div class="columnafooter">
+	
+					<p class="footertitulos">Nulla luctus eleifend</p>
+
+					<p class="fechafooter">Aliquam erat volutpat. Pellentesque<br> tristique ante ur risus.</p>
+
+					<p class="textoimg">Quisque dictum. Integer nisi risus sagittis<br>convallis, rutrum id, elementum conque,<br>nibh. Suspendisse dictum porta lectus.</p>
+
+					<p class="textoimg">Donec placerat odio vel elit, Nullam ante<br>orci, pellentesque eget tempues quis,<br>ultrices in est. Curatxtur sat amet nulia. Nam<br>in massa. Sed vel teilus. Curabitur sem<br>urna, consequat.</p>
+
+				</div>
+	
+				<div class="columnafooter">
+
+					<p class="footertitulos">Contact information</p>
+
+					<span class="fechafooter">Phone:</span><span class="textoimg"> 641 53 34 84</span>
+					<br>
+
+					<span class="fechafooter">Email:</span><span class="textoimg"> pedrovicentenavas@gmail.com</span>
+					<br><br>
+
+					<span class="fechafooter2">Hojitas</span>
+					<br>
+
+					<span class="textoimg2">C/Nueva2</span>
+					<br>
+
+					<span class="textoimg2">Alcorcón (Madrid)</span>
+
+
+				</div>
 
 			</div>
 
-			<div class="columnafooter">
-				<p class="footertitulos">Donec dicturm metus</p>
+			<hr id="hrfooter">
 
-				<p class="fechafooter">Mauris vulputate dolot sit amet</p>
-				<p class="textofechafooter2">Donec leo, vivamos lementum nibh in augue<br>present a lacus al urna congue rufrum.</p>
-
-				<p class="fechafooter">Fusce ultrices fringilla metus</p>
-				<p class="textofechafooter2">Donec leo, vivamos lementum nibh in augue<br>present a lacus al urna congue rufrum.</p>
-
-				<p class="fechafooter">Donec dictum metus in sapien</p>
-				<p class="textofechafooter">Donec leo, vivamos lementum nibh in augue<br>present a lacus al urna congue rufrum.</p>
-
-			</div>
-
-			<div class="columnafooter">
-
-				<p class="footertitulos">Nulla luctus eleifend</p>
-
-				<p class="fechafooter">Aliquam erat volutpat. Pellentesque<br> tristique ante ur risus.</p>
-
-				<p class="textoimg">Quisque dictum. Integer nisi risus sagittis<br>convallis, rutrum id, elementum conque,<br>nibh. Suspendisse dictum porta lectus.</p>
-
-				<p class="textoimg">Donec placerat odio vel elit, Nullam ante<br>orci, pellentesque eget tempues quis,<br>ultrices in est. Curatxtur sat amet nulia. Nam<br>in massa. Sed vel teilus. Curabitur sem<br>urna, consequat.</p>
-
-			</div>
-
-			<div class="columnafooter">
-
-				<p class="footertitulos">Contact information</p>
-
-				<span class="fechafooter">Phone:</span><span class="textoimg"> 641 53 34 84</span>
+			<div class="filapor">
 				<br>
-
-				<span class="fechafooter">Email:</span><span class="textoimg"> pedrovicentenavas@gmail.com</span>
-				<br><br>
-
-				<span class="fechafooter2">Hojitas</span>
-				<br>
-
-				<span class="textoimg2">C/Nueva2</span>
-				<br>
-
-				<span class="textoimg2">Alcorcón (Madrid)</span>
-
-
-			</div>
-
-		</div>
-
-		<hr id="hrfooter">
-
-		<div class="filapor">
-			<br>
 			
-				<span class="spanpor">Design: </span><span class="spanpor2">PEDRO VICENTE</span><span class="spanpor"> - Images: </span><span class="spanpor2">PEDRO VICENTE</span>
+					<span class="spanpor">Design: </span><span class="spanpor2">PEDRO VICENTE</span><span class="spanpor"> - Images: </span><span class="spanpor2">PEDRO VICENTE</span>
 		
+			</div>
+
 		</div>
 
 	</div>
