--- a/una_columna.html
+++ b/una_columna.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/responsive_movil.css">
+	<link rel="stylesheet" type="text/css" href="css/responsive_tablet.css">
+	
 </head>
 <body>
 
